--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,10 @@
 Name: Not your Mom-bot
 Commands: !
-Version: 1.1.2
-Date: 12/02/2021
-commands: changelog, conch, fuck, lynch (memorial), roll, role
+Version: 1.2.0
+Date: 06/07/2021
+commands: changelog, conch, fuck, lynch (memorial), roll, role, randomtide
 
-	- Fixed issue with epicPrint loop crashing bot on Selenium fail
-	- Fixed issue with datetime causing epicPrint to only print if run at exactly 11:00am
+	- Added randomtide command, specific to Vermintide party-forming
+	- Added error catching and logging for epic command
+	- Added reminder feature for epic command
+	- Changed how the bot gathers and chooses a valid date/time for epic
