only mention epic once
modification to logic to only send 1 mention if there are 2+ epic games

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,8 @@
 Name: Not your Mom-bot
 Commands: !
-Version: 1.2.0
+Version: 1.2.1
 Date: 06/07/2021
 commands: changelog, conch, fuck, lynch (memorial), roll, role, randomtide
 
-	- Added randomtide command, specific to Vermintide party-forming
-	- Added error catching and logging for epic command
-	- Added reminder feature for epic command
-	- Changed how the bot gathers and chooses a valid date/time for epic
+	- fixed epic loop to only mention once
+	- switched to edge webdriver
